test/corpus/array4.txt
==================
array4
==================

fun i32 @main () {
init:
  bid: b0
  allocations: 
    %l0:[10 x i32]:a

block b0:
  %b0:i0:i32* = getelementptr %l0:[10 x i32]* offset 0:i32
  j b2(%b0:i0:i32*, 0:i32)

block b2:
  %b2:p0:i32*:p
  %b2:p1:i32:i
  %b2:i0:u1 = cmp lt %b2:p1:i32 10:i32
  br %b2:i0:u1, b3(), b5()

block b3:
  %b3:i0:i64 = mul 1:i64 4:i64
  %b3:i1:i32* = getelementptr %b2:p0:i32* offset %b3:i0:i64
  %b3:i2:unit = store %b2:p1:i32 %b2:p0:i32*
  %b3:i3:i32 = add %b2:p1:i32 1:i32
  j b2(%b3:i1:i32*, %b3:i3:i32)

block b5:
  %b5:i0:i32* = getelementptr %l0:[10 x i32]* offset 0:i32
  %b5:i1:i64 = typecast 5:i32 to i64
  %b5:i2:i64 = mul %b5:i1:i64 4:i64
  %b5:i3:i32* = getelementptr %b0:i0:i32* offset %b5:i2:i64
  %b5:i4:i32 = load %b5:i3:i32*
  %b5:i5:u1 = cmp eq %b5:i4:i32 5:i32
  %b5:i6:i32 = typecast %b5:i5:u1 to i32
  ret %b5:i6:i32
}

---

(source_file
  (function_definition
    (function_signature
      (type
        (sigined_integer_type))
      (at_identifier))
    (function_body
      (init_block
        (init_block_id
          (block_id))
        (init_allocations
          (allocation
            (type
              (array_type
                (number)
                (type
                  (sigined_integer_type))))
            (identifier))))
      (block
        (block_id)
        (instruction
          (instruction_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (gep_op
            (operand
              (register_operand
                (type
                  (pointer_type
                    (type
                      (array_type
                        (number)
                        (type
                          (sigined_integer_type))))))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (exit
          (jump
            (block_id)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type)))))))
      (block
        (block_id)
        (phi_node
          (phi_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (identifier))
        (phi_node
          (phi_id)
          (type
            (sigined_integer_type))
          (identifier))
        (instruction
          (instruction_id)
          (type
            (unsigned_integer_type))
          (cmp_op
            (cmp_operator)
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (exit
          (conditional_branch
            (operand
              (register_operand
                (instruction_id)
                (type
                  (unsigned_integer_type))))
            (block_id)
            (block_id))))
      (block
        (block_id)
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (gep_op
            (operand
              (register_operand
                (phi_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type)
          (store
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (operand
              (register_operand
                (phi_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (phi_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (exit
          (jump
            (block_id)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type)))))))
      (block
        (block_id)
        (instruction
          (instruction_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (gep_op
            (operand
              (register_operand
                (type
                  (pointer_type
                    (type
                      (array_type
                        (number)
                        (type
                          (sigined_integer_type))))))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (typecast
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))
            (type
              (sigined_integer_type))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (arith_op
            (arith_operator)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (pointer_type
              (type
                (sigined_integer_type))))
          (gep_op
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (load
            (operand
              (register_operand
                (instruction_id)
                (type
                  (pointer_type
                    (type
                      (sigined_integer_type))))))))
        (instruction
          (instruction_id)
          (type
            (unsigned_integer_type))
          (cmp_op
            (cmp_operator)
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))
            (operand
              (constant_operand
                (constant
                  (number))
                (type
                  (sigined_integer_type))))))
        (instruction
          (instruction_id)
          (type
            (sigined_integer_type))
          (typecast
            (operand
              (register_operand
                (instruction_id)
                (type
                  (unsigned_integer_type))))
            (type
              (sigined_integer_type))))
        (exit
          (return
            (operand
              (register_operand
                (instruction_id)
                (type
                  (sigined_integer_type))))))))))
